test/expected/cast_rgi.out
cast x into register int
            ^
13: error: can not cast into "register"
